Closed Bug 164648 Opened 22 years ago Closed 22 years ago

XprintUtils does not handle non-space "whitespace-like" seperators in ${XPSERVERLIST} correctly

Categories

(Core Graveyard :: Printing: Xprint, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.0.2

People

(Reporter: roland.mainz, Assigned: roland.mainz)

Details

Attachments

(1 file, 2 obsolete files)

XprintUtils doesn't like non-space "whitespace-like" seperators in ${XPSERVERLIST} Example: x=$(echo "foo\nbar") ; echo $x # looks like "foo bar" in a terminal window but the seperator between "foo" and "bar" is still a newline. The current XprintUtil code doesn't handle this issue... ;-( IMHO we should support (at least) space, alternate-space, TAB, vertical TAB and newline.
Swapping QA<---->Owner...
Assignee: katakai → Roland.Mainz
QA Contact: Roland.Mainz → katakai
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0.2
Attached patch Patch for 2002-09-14-08-trunk (obsolete) — Splinter Review
Requesting r=/sr= ...
Keywords: patch, review
Filed http://xprint.mozdev.org/bugs/show_bug.cgi?id=2147 to track this issue for the XprintUtil copy in xprint.mozdev.org's source tree...
Comment on attachment 99313 [details] [diff] [review] Patch for 2002-09-14-08-trunk r=bbaetz, since roland tells me that X11's equivalent of this handles this via isspace.
Attachment #99313 - Flags: review+
Change XPSERVERLIST_SEPERATORS to something like this: static const char XPServerListSeparators[] = ...; (It's type safe, and saves space on some compilers) and then sr=roc+moz
Comment on attachment 102003 [details] [diff] [review] New patch for 2002-09-29-08-trunk per roc-moz's superreview comments sr=roc+moz r=bbaetz
Attachment #102003 - Flags: superreview+
Attachment #102003 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard

Comment on attachment 9157418 [details]
Bug 164648: Stop using GetInProcessParentDocument in DoSecureToInsecureSubmitCheck. r=nika

Revision D80068 was moved to bug 1646482. Setting attachment 9157418 [details] to obsolete.

Attachment #9157418 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: