XprintUtils does not handle non-space "whitespace-like" seperators in ${XPSERVERLIST} correctly. Bug 164648, Author=Roland.Mainz@informatik.med.uni-giessen.de,r=bbaetz, sr=roc+moz.